2nd day on this program, did some backend for now, trying to connect the api but sadly the api isn't available anymore. looking for altenatives.

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -31,3 +31,12 @@ html, body, #root {
         }
     }
 }
+
+.btn {
+    border: 1px solid #ddd;
+    margin: 15px 0px;
+
+    &:focus {
+        outline: none;
+    }
+}
