--- a/src/components/top/styles.scss
+++ b/src/components/top/styles.scss
@@ -10,6 +10,7 @@
     .title {
         font-size: 20px;
         color: #fff;
+        margin-top: 10px;
     }
 }
 
@@ -52,4 +53,13 @@
         justify-content: center;
         font-size: 20px;
     }
+}
+
+.btn-select-location{
+
+    background-color: #49dcc2;
+    font-size: 20px;
+    font-family: Roboto, sans-serif;
+    border-radius: 3px;
+    color: #222;
 }
